--- a/WebContent/view/ucenter.html
+++ b/WebContent/view/ucenter.html
@@ -15,7 +15,6 @@
 <!-- //Custom Theme files -->
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
-<link href="css/teachers.css" rel="stylesheet">
 <!-- //font-awesome icons -->
 <!-- js -->
 <!-- <script src="js/jquery.min.js"></script> -->
@@ -507,23 +506,16 @@
 				</div>
 				<section>
 					<div class="modal-body">
-						<div  class="teachers_banner">
-						    <div class="clearfix teachers_b" style="width:100%;">
-						        <div class="slide" id="slide">
-						            <ul id="imgs">
-						                <!-- <li> <img src="images/teacher01.jpg" alt="林奇涵" title=""> </li>
-						                <li> <img src="images/teacher02.jpg" alt="易星晨" title=""> </li>
-						                <li> <img src="images/teacher03.jpg" alt="曾海阳"  title=""> </li>
-						                <li> <img src="images/teacher04.jpg" alt="狄俊祺"  title=""> </li>
-						                <li> <img src="images/teacher05.jpg" alt="仲颖鸣" title="" /> </li>
-						                <li> <img src="images/teacher06.jpg" alt="徐晓磊" title="" /> </li> -->
-						            </ul>
-						            <div class="arrow">
-						                <div class="prev">&lt;</div>
-						                <div class="next">&gt;</div>
-						            </div>
-						        </div>
-						    </div>
+						<div id="myCarousel" class="carousel slide">
+							<!-- 轮播（Carousel）指标 -->
+							<ol class="carousel-indicators" id="tag" style="margin-bottom:0px !important;">
+								 
+							</ol>   
+							<!-- 轮播（Carousel）项目 -->
+							<div class="carousel-inner" id="img-content">
+							
+							</div>
+						
 						</div>
 					</div>
 				</section>
@@ -715,14 +707,19 @@
         			if(data.status == 'success'){
        					var rows = [];
            				rows = data.piclist;
-           				var html = "";
+           				var html = '';
+           				var tagHtml = '';
            				for(var i = 0 ; i < rows.length ; i++){
-           					html += '<li>';
-           					html += '<img src="'+rows[i].pUrl+'">';
-           					html += '</li>';
+           					if(i == 0){
+           						tagHtml += '<li data-target="#myCarousel" data-slide-to="'+i+'" class="active"></li>';
+           						html += '<div class="item active"><img src="'+rows[i].pUrl+'" style="margin:0 auto;"></div>';
+           					}else{
+           						tagHtml += '<li data-target="#myCarousel" data-slide-to="'+i+'"></li>';
+           						html += '<div class="item"><img src="'+rows[i].pUrl+'"  style="margin:0 auto;"></div>';
+           					}
            				}
-           				$('#imgs').empty().append(html);
-           				showImgs(rows.length);
+           				$('#tag').empty().append(tagHtml);
+           				$('#img-content').empty().append(html);
         			}else{
         				//没有数据或服务器错误
         			}
@@ -877,85 +874,6 @@
     				}
     			}
     		});
-        }
-        function showImgs(num){
-        	/*图片位置数据*/
-        	var datas = [];
-        	if(num == 1){
-        		datas = [{'z-index': 6, opacity: 1, width: 660, height: 330, top: 40, left: 0}];
-        	}else if(num == 2){
-        		datas = [
-	    		    {'z-index': 6, opacity: 1, width: 660, height: 330, top: 40, left: 0},
-	        	    {'z-index': 4, opacity: 0.6, width: 560, height: 243, top:80, left: -50}
-    		    ]
-        	}else if(num == 3){
-        		datas = [
-					{'z-index': 6, opacity: 1, width: 660, height: 330, top: 40, left: 0},
-					{'z-index': 4, opacity: 0.6, width: 560, height: 243, top:80, left: -50},
-					{'z-index': 3, opacity: 0.4, width: 480, height: 203, top: -10, left: -25},
-       		    ]
-        	}else if(num == 4){
-        		datas = [
-					{'z-index': 6, opacity: 1, width: 660, height: 330, top: 40, left: 0},
-					{'z-index': 4, opacity: 0.6, width: 560, height: 243, top:80, left: -50},
-					{'z-index': 3, opacity: 0.4, width: 480, height: 203, top: -10, left: -25},
-					{'z-index': 2, opacity: 0.2, width: 620, height: 269, top: -60, left: 50},
-       		    ]
-        	}else{
-        		datas = [
-					{'z-index': 6, opacity: 1, width: 660, height: 330, top: 40, left: 0},
-					{'z-index': 4, opacity: 0.6, width: 560, height: 243, top:80, left: -50},
-					{'z-index': 3, opacity: 0.4, width: 480, height: 203, top: -10, left: -25},
-					{'z-index': 2, opacity: 0.2, width: 620, height: 269, top: -60, left: 50},
-					{'z-index': 3, opacity: 0.4, width: 480, height: 203,  top: -10, left: -150},
-				]
-        	}
-            move();
-
-            function move() {
-                /*图片分布*/
-                for (var i = 0; i < datas.length; i++) {
-                    var data = datas[i];
-                    $('#slide ul li').eq(i).css('z-index',data['z-index']);
-                    $('#slide ul li').eq(i).stop().animate(data, 1200);
-                }
-            }
-
-            /*左箭头事件*/
-            $('.prev').on('click', function () {
-                var last = datas.pop();
-                datas.unshift(last);
-
-                move();
-            })
-
-            /*右箭头事件处理函数*/
-            function nextYewu(){
-                var first = datas.shift();
-                datas.push(first);
-                move();
-            }
-            /*右箭头事件*/
-            $('.next').on('click', nextYewu);
-
-            /*自动播放*/
-            var timer = setInterval(function(){
-                nextYewu();
-            },5000);
-            /*鼠标进入slide显示箭头,清除自动播放*/
-            $('#slide').on({
-                mouseenter: function () {
-                    $('.arrow').css('display', 'block');
-                    clearInterval(timer);
-                }, mouseleave: function () {
-                    $('.arrow').css('display', 'none');
-                    /*鼠标离开时自动播放*/
-                    clearInterval(timer);
-                    timer = setInterval(function(){
-                        nextYewu();
-                    },5000)
-                }
-            })
         }
 	</script>
 	<!-- //cart-js --> 
