--- a/WebContent/view/search.html
+++ b/WebContent/view/search.html
@@ -106,14 +106,14 @@
 		$.ajax({
 			type : "get",
 			async : true,
-			url : "../goods/listByConds.action",
+			url : "../goods/listByCondsWithPage.action",
 			dataType : "json",
 			data : {
 				pageNum:pageNum,
 				conds:JSON.stringify(conds)
 			},
 			success : function(data) {
-				console.log(data);
+				//console.log(data);
 				if (data.status == 'success') {
 					var rows = [];
 					rows = data.data;
@@ -130,7 +130,7 @@
 						html += '<ul><li><a href="#" data-toggle="modal" data-target="#myModal2"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></li></ul></div></div>';
 						html += '<h5><a href="single.html?gId='+rows[i].gId+'">'+rows[i].gName+'</a></h5>';
 						html += '<div class="simpleCart_shelfItem">';
-						html += '<p><span>9成新</span> <i class="item_price">￥'+rows[i].gPrice+'</i></p>';
+						html += '<p><span>'+rows[i].gDeId.deDescribe+'</span> <i class="item_price">￥'+rows[i].gPrice+'</i></p>';
 						html += '<form action="#" method="post">';
 						html += '<input type="hidden" name="cmd" value="_cart">';
 						html += '<input type="hidden" name="add" value="1">';
@@ -356,7 +356,7 @@
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 					<ul class="nav navbar-nav">
 						<li style="visibility:hidden;"><a href="mail.html">联系我们</a></li>					
-						<li><a href="index.html" class="act">首页</a></li>	
+						<li><a href="index.html">首页</a></li>	
 						<!-- Mega Menu -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">所有分类 <b class="caret"></b></a>
